--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <script src="app.js" defer></script>
 </head>
 <body>
+  <h1> Useful Tips : Sourcemap in tsconfig.json is to bridge ts file to browser source folder so that dev can debug</h1>
+  <p>Outdir is for output directory </p>
   <input type="number" id="num1" placeholder="Number 1">
   <input type="number" id="num2" placeholder="Number 2">
   <button type="button">ADD !</button>
+  
 </body>
 </html>
