Add Random words on btn Click

--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="/dist/app.js" defer></script>
-  <script src="/dist/myAnalytics.js" defer></script>
- 
-</head>
-<body>
-  <h1> Useful Tips : Sourcemap in tsconfig.json is to bridge ts file to browser source folder so that dev can debug</h1>
-  <p>Outdir is for output directory </p>
-  <input type="number" id="num1" placeholder="Number 1">
-  <input type="number" id="num2" placeholder="Number 2">
-  <button type="button">ADD !</button>
-  
-
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <script src="/dist/app.js" defer></script>
+    <script src="/dist/myAnalytics.js" defer></script>
+  </head>
+  <body>
+    <h1>
+      Useful Tips : Sourcemap in tsconfig.json is to bridge ts file to browser
+      source folder so that dev can debug
+    </h1>
+    <p>Outdir is for output directory</p>
+    <input type="number" id="num1" placeholder="Number 1" />
+    <input type="number" id="num2" placeholder="Number 2" />
+    <button type="button" style="width: 100px; height: 100px">
+      Click to Start
+    </button>
+  </body>
 </html>
 
 <!-- noEmitOnError is like if you have some errors in your ts file it will not compile all of ts files to js files -->
